--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@lottiefiles/lottie-interactivity": "^1.6.1",
+    "@mantine/core": "^5.6.4",
+    "@mantine/hooks": "^5.6.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-parallax-mouse": "^1.7.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
