--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@emotion/react": "^11.10.5",
     "@lottiefiles/lottie-interactivity": "^1.6.1",
     "@mantine/core": "^5.6.4",
+    "@mantine/dropzone": "^5.6.4",
+    "@mantine/form": "^5.6.4",
     "@mantine/hooks": "^5.6.4",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@tabler/icons": "^1.109.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +23,7 @@
     "react-icons": "^4.6.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-parallax-mouse": "^1.7.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
