--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parallax-js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-parallax-mouse": "^1.7.3",
