--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@mantine/dropzone": "^5.6.4",
     "@mantine/form": "^5.6.4",
     "@mantine/hooks": "^5.6.4",
+    "@react-three/drei": "^9.47.1",
+    "@react-three/fiber": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "@splinetool/loader": "^0.9.166",
+    "@splinetool/r3f-spline": "^1.0.2",
     "@tabler/icons": "^1.109.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.146.0",
     "framer-motion": "^7.6.1",
     "gsap": "^3.11.3",
     "lottie-web": "^5.9.6",
@@ -28,6 +33,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "three": "^0.147.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
