--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-use-refs": "^1.0.1",
+    "styled-components": "^5.3.6",
     "three": "^0.147.0",
     "web-vitals": "^2.1.4"
   },
